finished css and html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             Subtract
           </button>
           <button class="reset">
-            <i class="fas fa-arrow-reset"></i>
+            <i class="fas fa-spinner"></i>
             Reset
           </button>
           <button class="add">
